--- a/public/style.css
+++ b/public/style.css
@@ -1,62 +1,31 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
-
-* {
-  margin: 0
+.main{
+	padding:20px;
+	font-family: 'Helvetica', serif;
+	box-shadow: 5px 5px 7px 5px #888888;
+	
 }
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-  background-color: #606060;
+.main h1{
+	font-size: 40px;
+	text-align:center;
+	font-family: 'Helvetica', serif;
+	
 }
-
-h1 {
-  color: white;
-  font-family: "Oswald", sans-serif;
-  margin: 20px 0;
-  text-align: center;
+input{
+	font-family: 'Helvetica', serif;
+	width: 100%;
+	font-size: 20px;
+	padding: 12px 20px;
+	margin: 8px 0;
+	border: none;
+	border-bottom: 2px solid #767474;
 }
-
-.registartion-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 500px;
-  color: #fff;
-  font-size: 18px;
-  font-family: sans-serif;
-  background-color: #606060;
-  padding: 20px;
-}
-
-.registartion-form input,
-.registartion-form select,
-.registartion-form textarea {
-  border: none;
-  padding: 5px;
-  margin-top: 10px;
-  font-family: sans-serif;
-}
-
-.registartion-form input:focus,
-.registartion-form textarea:focus {
-  outline: none;
-  box-shadow: 0 0 10px rgb(228, 228, 228), 0 0 10px rgb(224, 224, 224);
-}
-
-.registartion-form .submit {
-  width: 100%;
-  padding: 8px 0;
-  font-size: 20px;
-  font-weight: 600;
-  color: #333;
-  background-color: #fff;
-  border-radius: 5px;
-}
-
-.registartion-form .submit:hover {
-  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+input[type=submit] {
+	font-family: 'Helvetica', serif;
+	width: 100%;
+	background-color: #767474;
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	margin: 4px 2px;
+	border-radius: 10px;
 }
