--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,15 @@
+body {
+	background-image: url('/imgs/bg.png');
+	background-repeat: no-repeat;
+  	background-attachment: fixed;
+  	background-size: cover;
+}
+
 .main{
 	padding:20px;
 	font-family: 'Helvetica', serif;
 	box-shadow: 5px 5px 7px 5px #888888;
-	
+	background-color: hsla(189, 59%, 29%, 0.753);
 }
 .main h1{
 	font-size: 40px;
